# hdf5_benchmarks

./: CMakeLists.txt  C_multiple_datasets.cpp  C_multiple_datasets.h  C_single_dataset.cpp  C_single_dataset.h  LICENSE  benchmark_plots.py  common_funcs.py  compression_benchmark.py  compression_multiple_datasets_benchmark.py  configuration.cpp  configuration.h  create_all_plots.py  large_file_benchmark.py  large_file_plots.py  main.cpp  requirements.txt  sparsity_benchmark.py  sparsity_plots.py
results/: h5_compression_benchmark_sparsity.json  h5_compression_benchmark_sparsity_multiple_datasets.json  h5_large_file_benchmark.json  h5_large_file_benchmark_outputprints.txt  h5_sparsity_benchmark.json
